test/js/node/test/parallel/test-stream-toWeb-allows-server-response.js.log.txt
816 | Writable.prototype[EE.captureRejectionSymbol] = function(err) {
817 |   this.destroy(err);
818 | };
819 | Writable.fromWeb = function(writableStream, options) {
820 |   throw @makeErrorWithCode(39);
821 | Writable.toWeb = function(streamWritable) {
                               ^
TypeError: requires 2 arguments
      at internal:streams/writable:821:26
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-toWeb-allows-server-response.js:11:40
      at emit (node:events:74:48)
      at fetch (node:http:508:14)

Bun v1.1.31-debug+5fc53353f (macOS arm64)
